syntax = "proto3";
package cosmos.interchainaccounts.nameservice;

import "gogoproto/gogo.proto";
import "interchainaccounts/nameservice/params.proto";
import "interchainaccounts/nameservice/whois.proto";
import "interchainaccounts/nameservice/testmin.proto";
import "interchainaccounts/nameservice/pending_buy.proto";
import "interchainaccounts/nameservice/pending_sell.proto";
import "interchainaccounts/nameservice/cmp_host_result.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/cosmos/interchain-accounts/x/nameservice/types";

// GenesisState defines the nameservice module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Whois whoisList = 2 [(gogoproto.nullable) = false];
  Testmin testmin = 3;
  repeated PendingBuy pendingBuyList = 4 [(gogoproto.nullable) = false];
  repeated PendingSell pendingSellList = 5 [(gogoproto.nullable) = false];
  repeated CmpHostResult cmpHostResultList = 6 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
